GitOps/clusters/cyberhawk-talos-k8s/3-apps/paperless/23-valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-valkey
spec:
  selector:
    app: paperless-valkey
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
