GitOps/clusters/cyberhawk-talos-k8s/3-apps/paperless/34-paperless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  selector:
    app: paperless
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
