GitOps/clusters/cyberhawk-talos-k8s/3-apps/paperless/71-gotenberg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
spec:
  selector:
    app: gotenberg
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
