GitOps/clusters/cyberhawk-talos-k8s/3-apps/paperless/73-tika-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tika
spec:
  selector:
    app: tika
  ports:
    - name: http
      port: 9998
      targetPort: http
      protocol: TCP
