GitOps/clusters/cyberhawk-talos-k8s/3-apps/paperless/40-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - paperless.cyberhawk.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless
          port: 8000
